--- a/port.css
+++ b/port.css
@@ -54,7 +54,7 @@ footer{
     background-color: black; 
 }
 .final{
-    font-size: 160%;
+    font-size: 180%;
     color: white;
     margin-left: 80px;
     margin-right: 80px;
@@ -65,4 +65,21 @@ footer{
 .eu{
     width: 40%;
 }
-
+.footer{
+    background-color: black;
+}
+form{
+    display: flex;
+    flex-direction: column;
+    width: 35%;
+    margin: 0 auto;
+}
+.input-form{
+    text-align: center;
+    display: inline-block;
+}
+form label, form legend{
+	display: block;
+	font-size: 20px;
+	margin: 0 0 10px;
+}
